Add Lesson model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,17 @@
       "**/CVS": true
    },
    "files.autoSave": "off",
-   "workbench.colorTheme": "Visual Studio Dark",
-   "terminal.integrated.gpuAcceleration": "canvas",
+   "workbench.colorTheme": "devTheme",
+   "terminal.integrated.gpuAcceleration": "auto",
+
+  "[python]": {
+		"editor.formatOnSave": true,
+		"editor.codeActionsOnSave": {
+			"source.fixAll": "explicit",
+			"source.organizeImports": "explicit"
+		},
+		"editor.defaultFormatter": "charliermarsh.ruff"
+	},
+	"editor.rulers": [88]
 }
+
